// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> ref should work 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> should render Box props correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 20px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
  id="id"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> should render Checkbox correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> should render indeterminate checkbox correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M2 4a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4zm1.818-.182h16.364v16.364H3.818V3.818zM7 11a1 1 0 1 0 0 2h10a1 1 0 1 0 0-2H7z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should extend styles in global 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should extend styles in local 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should override styles 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 50px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox c0"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should render with default props correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control poodle-checkbox hello c0"
  id="id"
>
  <div
    class="poodle-box poodle-check-control__control poodle-checkbox__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input poodle-checkbox__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon poodle-checkbox__icon c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label poodle-checkbox__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      Hello
    </span>
  </label>
</div>
`;
